--- a/FinalJobMatching/src/app/login/login.component.html
+++ b/FinalJobMatching/src/app/login/login.component.html
@@ -1,35 +1,31 @@
 <div class="login-page">
   <mat-card class="mat-elevation-z12">
     <mat-card-title style="text-align:center;">SignIn/SignUp</mat-card-title>
-    <mat-tab-group mat-stretch-tabs class="example-stretched-tabs">
-      <mat-tab label="As Employeer">
-
         <mat-card-content>
-          <form action="">
+          <form action="" #ng>
             <mat-form-field>
               <input
                 matInput
                 placeholder="Company Email Address"
                 required
+                [(ngModel)]="loginUserData.email"
                 name="email"
-                ngModel
                 #email="ngModel">
               <mat-icon matSuffix>perm_identity</mat-icon>
               <mat-error
                 *ngIf="email.invalid">
                 Email is required
               </mat-error>
-
             </mat-form-field>
             <mat-form-field>
               <input
                 matInput
                 placeholder="Company name/ Personal full name"
                 required
-                name="fname"
-                ngModel
-                #fname="ngModel">
-                <mat-error *ngIf="fname.invalid">This field is required</mat-error>
+                [(ngModel)]="loginUserData.username"
+                name="username"
+                #username="ngModel">
+                <mat-error *ngIf="username.invalid">This field is required</mat-error>
               <mat-icon matSuffix>email</mat-icon>
             </mat-form-field>
             <mat-form-field>
@@ -72,98 +68,11 @@
             <button
               mat-raised-button
               color="primary"
+              (click) = "loginUser()"
               class="login-button">
               Sign Up
             </button>
           </form>
         </mat-card-content>
-      </mat-tab>
-      <mat-tab label="As User">
-        <mat-card-content>
-          <form action="">
-            <mat-form-field>
-              <input
-                matInput
-                placeholder="Company Email Address"
-                required
-                name="email"
-                ngModel
-                #email="ngModel">
-              <mat-icon matSuffix>perm_identity</mat-icon>
-              <mat-error
-                *ngIf="email.invalid">
-                Email is required
-              </mat-error>
-
-            </mat-form-field>
-            <mat-form-field>
-              <input
-                matInput
-                placeholder="First Name"
-                required
-                name="fname"
-                ngModel
-                #fname="ngModel">
-                <mat-error *ngIf="fname.invalid">This field is required</mat-error>
-              <mat-icon matSuffix>email</mat-icon>
-            </mat-form-field>
-            <mat-form-field>
-              <input
-                matInput
-                placeholder="Last name"
-                required
-                name="lname"
-                ngModel
-                #lname="ngModel">
-                <mat-error *ngIf="lname.invalid">This field is required</mat-error>
-              <mat-icon matSuffix>email</mat-icon>
-            </mat-form-field>
-            <mat-form-field>
-              <input
-                matInput
-                placeholder="Password"
-                type="password"
-                required
-                minlength="6"
-                name="password"
-                ngModel
-                #password="ngModel">
-                <mat-error
-                  *ngIf="password.errors && password.errors.required">
-                  Password is required
-                </mat-error>
-                <mat-error
-                  *ngIf="password.errors && password.errors.minlength">
-                  Password must be of length 6
-                </mat-error>
-              <mat-icon matSuffix>lock</mat-icon>
-
-            </mat-form-field>
-            <mat-form-field>
-                <input
-                matInput
-                placeholder="Confirm password"
-                type="password"
-                required
-                minlength="6"
-                name="repassword"
-                ngModel
-                #repassword="ngModel">
-                <mat-error
-                  *ngIf="repassword.errors && repassword.errors.required">
-                  Re-Enter Password is required
-                </mat-error>
-              <mat-icon matSuffix>lock</mat-icon>
-            </mat-form-field>
-            <button
-              mat-raised-button
-              color="primary"
-              class="login-button">
-              Sign Up
-            </button>
-          </form>
-        </mat-card-content>
-      </mat-tab>
-    </mat-tab-group>
   </mat-card>
 </div>
