this is the demo one

--- a/FinalJobMatching/src/app/app.component.html
+++ b/FinalJobMatching/src/app/app.component.html
@@ -1,2 +1,19 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
+<!-- <mat-sidenav-container fxFlexFill class="example-container">
+  <mat-sidenav color="primary"  #sidenav fxLayout="column" mode="over"  opened="false" fxHide.gt-sm="true">
+    <app-side-nav></app-side-nav>
+  </mat-sidenav>
+  <mat-sidenav-content fxFlexFill>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+
+
+
+
+
+
+
+</mat-sidenav-container> -->
+
