--- a/FinalJobMatching/src/app/employee-login/employee-login.component.html
+++ b/FinalJobMatching/src/app/employee-login/employee-login.component.html
@@ -8,7 +8,7 @@
                 matInput
                 placeholder="Company Email Address"
                 required
-                [(ngModel)]="loginUserData.email"
+                [(ngModel)]="loginEmployeeData.email"
                 name="email"
                 #email="ngModel">
               <mat-icon matSuffix>perm_identity</mat-icon>
@@ -20,17 +20,6 @@
             <mat-form-field>
               <input
                 matInput
-                placeholder="Company name/ Personal full name"
-                required
-                [(ngModel)]="loginUserData.username"
-                name="username"
-                #username="ngModel">
-                <mat-error *ngIf="username.invalid">This field is required</mat-error>
-              <mat-icon matSuffix>email</mat-icon>
-            </mat-form-field>
-            <mat-form-field>
-              <input
-                matInput
                 placeholder="Password"
                 type="password"
                 required
@@ -38,7 +27,7 @@
                 name="password"
                 ngModel
                 #password="ngModel"
-                [(ngModel)]="loginUserData.password"
+                [(ngModel)]="loginEmployeeData.password"
                 >
                 <mat-error
                   *ngIf="password.errors && password.errors.required">
@@ -49,31 +38,13 @@
                   Password must be of length 6
                 </mat-error>
               <mat-icon matSuffix>lock</mat-icon>
-
-            </mat-form-field>
-            <mat-form-field>
-                <input
-                matInput
-                placeholder="Confirm password"
-                type="password"
-                required
-                minlength="6"
-                name="confirm_password"
-                ngModel
-                #confirm_password="ngModel"
-               >
-                <mat-error
-                  *ngIf="confirm_password.errors && confirm_password.errors.required">
-                  Re-Enter Password is required
-                </mat-error>
-              <mat-icon matSuffix>lock</mat-icon>
             </mat-form-field>
             <button
               mat-raised-button
               color="primary"
-              (click) = "loginUser()"
+              (click) = "loginEmployee()"
               class="login-button">
-              Sign Up
+              Login
             </button>
           </form>
         </mat-card-content>
