--- a/FinalJobMatching/src/app/register/register.component.html
+++ b/FinalJobMatching/src/app/register/register.component.html
@@ -1,35 +1,46 @@
 <div class="login-page">
   <mat-card class="mat-elevation-z12">
-    <mat-card-title style="text-align:center;">SignIn/SignUp</mat-card-title>
+    <mat-card-title style="text-align:center;">Register to See Jobs</mat-card-title>
     <mat-tab-group mat-stretch-tabs class="example-stretched-tabs">
       <mat-tab label="As Employeer">
-
         <mat-card-content>
-          <form action="">
+          <form action="" #ng>
             <mat-form-field>
               <input
                 matInput
                 placeholder="Company Email Address"
                 required
+                [(ngModel)]="registerEmployerData.email"
                 name="email"
-                ngModel
                 #email="ngModel">
               <mat-icon matSuffix>perm_identity</mat-icon>
               <mat-error
                 *ngIf="email.invalid">
                 Email is required
               </mat-error>
-
             </mat-form-field>
             <mat-form-field>
               <input
                 matInput
                 placeholder="Company name/ Personal full name"
                 required
-                name="fname"
+                name="username"
                 ngModel
-                #fname="ngModel">
-                <mat-error *ngIf="fname.invalid">This field is required</mat-error>
+                #password="ngModel"
+                [(ngModel)]="registerEmployerData.username"
+                >
+                <mat-error *ngIf="username.invalid">This field is required</mat-error>
+              <mat-icon matSuffix>email</mat-icon>
+            </mat-form-field>
+            <mat-form-field>
+              <input
+                matInput
+                placeholder="Company Address"
+                required
+                name="address"
+                [(ngModel)]="registerEmployerData.address"
+                #address="ngModel">
+                <mat-error *ngIf="address.invalid">This field is required</mat-error>
               <mat-icon matSuffix>email</mat-icon>
             </mat-form-field>
             <mat-form-field>
@@ -41,7 +52,9 @@
                 minlength="6"
                 name="password"
                 ngModel
-                #password="ngModel">
+                #password="ngModel"
+                [(ngModel)]="registerEmployerData.password"
+                >
                 <mat-error
                   *ngIf="password.errors && password.errors.required">
                   Password is required
@@ -51,7 +64,6 @@
                   Password must be of length 6
                 </mat-error>
               <mat-icon matSuffix>lock</mat-icon>
-
             </mat-form-field>
             <mat-form-field>
                 <input
@@ -60,11 +72,12 @@
                 type="password"
                 required
                 minlength="6"
-                name="repassword"
+                name="confirm_password"
                 ngModel
-                #repassword="ngModel">
+                #confirm_password="ngModel"
+               >
                 <mat-error
-                  *ngIf="repassword.errors && repassword.errors.required">
+                  *ngIf="confirm_password.errors && confirm_password.errors.required">
                   Re-Enter Password is required
                 </mat-error>
               <mat-icon matSuffix>lock</mat-icon>
@@ -72,50 +85,40 @@
             <button
               mat-raised-button
               color="primary"
+              (click) = "registerEmployer()"
               class="login-button">
               Sign Up
             </button>
           </form>
         </mat-card-content>
       </mat-tab>
+ <!-- start of the employee data -->
       <mat-tab label="As User">
         <mat-card-content>
-          <form action="">
+          <form action="" #ng>
             <mat-form-field>
               <input
                 matInput
-                placeholder="Company Email Address"
+                placeholder="Email Address"
                 required
+                [(ngModel)]="registerEmployeeData.email"
                 name="email"
-                ngModel
                 #email="ngModel">
               <mat-icon matSuffix>perm_identity</mat-icon>
               <mat-error
                 *ngIf="email.invalid">
                 Email is required
               </mat-error>
-
             </mat-form-field>
             <mat-form-field>
               <input
                 matInput
-                placeholder="First Name"
+                placeholder="Personal full name"
                 required
-                name="fname"
-                ngModel
-                #fname="ngModel">
-                <mat-error *ngIf="fname.invalid">This field is required</mat-error>
-              <mat-icon matSuffix>email</mat-icon>
-            </mat-form-field>
-            <mat-form-field>
-              <input
-                matInput
-                placeholder="Last name"
-                required
-                name="lname"
-                ngModel
-                #lname="ngModel">
-                <mat-error *ngIf="lname.invalid">This field is required</mat-error>
+                [(ngModel)]="registerEmployeeData.username"
+                name="username"
+                #username="ngModel">
+                <mat-error *ngIf="username.invalid">This field is required</mat-error>
               <mat-icon matSuffix>email</mat-icon>
             </mat-form-field>
             <mat-form-field>
@@ -127,7 +130,9 @@
                 minlength="6"
                 name="password"
                 ngModel
-                #password="ngModel">
+                #password="ngModel"
+                [(ngModel)]="registerEmployeeData.password"
+                >
                 <mat-error
                   *ngIf="password.errors && password.errors.required">
                   Password is required
@@ -146,11 +151,12 @@
                 type="password"
                 required
                 minlength="6"
-                name="repassword"
+                name="confirm_password"
                 ngModel
-                #repassword="ngModel">
+                #confirm_password="ngModel"
+               >
                 <mat-error
-                  *ngIf="repassword.errors && repassword.errors.required">
+                  *ngIf="confirm_password.errors && confirm_password.errors.required">
                   Re-Enter Password is required
                 </mat-error>
               <mat-icon matSuffix>lock</mat-icon>
@@ -158,10 +164,12 @@
             <button
               mat-raised-button
               color="primary"
+              (click) = "registerEmployee()"
               class="login-button">
               Sign Up
             </button>
           </form>
+          <!-- end of the employer data -->
         </mat-card-content>
       </mat-tab>
     </mat-tab-group>
