--- a/FinalJobMatching/src/app/login/login.component.css
+++ b/FinalJobMatching/src/app/login/login.component.css
@@ -32,3 +32,13 @@ mat-card-content {
   width: 80%;
   margin: 20px auto;
 }
+mat-form-field input {
+  border: none;
+  height: initial !important;
+}
+
+mat-form-field input:focus {
+  border: none;
+  box-shadow: none;
+  height: initial !important;
+}
