--- a/FinalJobMatching/src/app/navbar/navbar.component.html
+++ b/FinalJobMatching/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary" class="mat-elevation-z8">
   <span><mat-icon>eco</mat-icon> Jobs</span>
   <div class="spacer"></div>
-  <a mat-button routerLink="/register" routerLinkActive='active'>Home</a>
+  <a mat-button routerLink="/home" routerLinkActive='active'>Home</a>
   <a mat-button routerLink="/jobs">Jobs</a>
-  <a mat-button>SignUp</a>
-  <a mat-raised-button routerLink="/login" color="darken">Register</a>
+  <a mat-button routerLink="/employeeLogin">SignUp</a>
+  <a mat-raised-button routerLink="/register" color="darken">Register</a>
 </mat-toolbar>
